@@ -540,6 +540,7 @@ sub initialize( $ ) {
 	  FORWARD_CLEAR_MARK => undef,
 	  COMPLETE => undef,
 	  EXPORTMODULES => undef,
+	  LEGACY_FASTSTART => undef,
 	  #
 	  # Packet Disposition
 	  #
@@ -3309,6 +3310,7 @@ sub get_configuration( $ ) {
     default_yes_no 'FORWARD_CLEAR_MARK'         , have_capability 'MARK' ? 'Yes' : '';
     default_yes_no 'COMPLETE'                   , '';
     default_yes_no 'EXPORTMODULES'              , '';
+    default_yes_no 'LEGACY_FASTSTART'           , '';
 
     require_capability 'MARK' , 'FOREWARD_CLEAR_MARK=Yes', 's', if $config{FORWARD_CLEAR_MARK};
 
