@@ -224,6 +224,22 @@ get_config() {
 	    fi
 	    ;;
     esac
+
+    case $LEGACY_FASTSTART in
+	Yes|yes)
+	    ;;
+	No|no)
+	    LEGACY_FASTSTART=
+	    ;;
+	*)
+	    if [ -n "$LEGACY_FASTSTART" ]; then
+		echo "   ERROR: Invalid LEGACY_FASTSTART setting (LEGACY_FASTSTART)" >&2
+		exit 1
+	    fi
+
+	    LEGACY_FASTSTART=Yes
+	    ;;
+    esac
 }
 
 #
@@ -239,7 +255,7 @@ startup_error() {
 # Determine if there are config files newer than the passed object
 #
 uptodate() {
-    [ -z "$(find ${CONFDIR} -newer $1)" ]
+    [ -f $1 ] && [ -z "$(find ${CONFDIR} -newer $1)" ]
 }
 
 #
@@ -413,7 +429,7 @@ start_command() {
     esac
 
     if [ -n "${g_fast}${AUTOMAKE}" ]; then
-	if [ -z "$g_fast" ]; then
+	if [ -z "$g_fast" -o -z "$LEGACY_FASTSTART" ]; then
 	    #
 	    # Autofast -- use the last compiled script
 	    #
