@@ -161,6 +161,8 @@ EXPORTMODULES=Yes
 
 ACCOUNTING_TABLE=filter
 
+LEGACY_FASTSTART=No
+
 ###############################################################################
 #			P A C K E T   D I S P O S I T I O N
 ###############################################################################
