@@ -360,6 +360,13 @@
         <filename>/etc/sysconfig/shorewall</filename> (if your distribution
         provides neither of these files, you must create one or the
         other).</para>
+
+        <para><emphasis role="bold">Update</emphasis>: In Shorewall 4.4.20, a
+        new LEGACY_FASTSTART option was added to <ulink
+        url="manpages/shorewall.conf.html">/etc/shorewall/shorewall.conf</ulink>.
+        When LEGACY_FASTSTART=No, the compiled script that did the last
+        successful <command role="bold">start</command> or <command
+        role="bold">restart</command> will be used.</para>
       </listitem>
 
       <listitem>
