@@ -79,7 +79,7 @@
     <variablelist>
       <varlistentry>
         <term><emphasis
-        role="bold">ACCEPT_DEFAULT=</emphasis>{<emphasis>action</emphasis>|<emphasis>macro</emphasis>|<emphasis
+        role="bold">ACCEPT_DEFAULT=</emphasis>{<emphasis>action</emphasis>|<emphasis
         role="bold">none</emphasis>}</term>
 
         <listitem>
@@ -89,7 +89,7 @@
 
       <varlistentry>
         <term><emphasis
-        role="bold">DROP_DEFAULT=</emphasis>{<emphasis>action</emphasis>|<emphasis>macro</emphasis>|<emphasis
+        role="bold">DROP_DEFAULT=</emphasis>{<emphasis>action</emphasis>|<emphasis
         role="bold">none</emphasis>}</term>
 
         <listitem>
@@ -99,7 +99,7 @@
 
       <varlistentry>
         <term><emphasis
-        role="bold">REJECT_DEFAULT=</emphasis>{<emphasis>action</emphasis>|<emphasis>macro</emphasis>|<emphasis
+        role="bold">REJECT_DEFAULT=</emphasis>{<emphasis>action</emphasis>|<emphasis
         role="bold">none</emphasis>}</term>
 
         <listitem>
@@ -109,7 +109,7 @@
 
       <varlistentry>
         <term><emphasis
-        role="bold">QUEUE_DEFAULT=</emphasis>{<emphasis>action</emphasis>|<emphasis>macro</emphasis>|<emphasis
+        role="bold">QUEUE_DEFAULT=</emphasis>{<emphasis>action</emphasis>|<emphasis
         role="bold">none</emphasis>}</term>
 
         <listitem>
@@ -119,7 +119,7 @@
 
       <varlistentry>
         <term><emphasis
-        role="bold">NFQUEUE_DEFAULT=</emphasis>{<emphasis>action</emphasis>|<emphasis>macro</emphasis>|<emphasis
+        role="bold">NFQUEUE_DEFAULT=</emphasis>{<emphasis>action</emphasis>|<emphasis
         role="bold">none</emphasis>}</term>
 
         <listitem>
@@ -832,6 +832,22 @@ net     all  DROP   info</programlisting>then the chain name is 'net2all'
           command.</para>
 
           <para>The default is KEEP_RT_TABLES=No.</para>
+        </listitem>
+      </varlistentry>
+
+      <varlistentry>
+        <term><emphasis role="bold">LEGACY_FASTSTART=</emphasis>{<emphasis
+        role="bold">Yes</emphasis>|<emphasis role="bold">No</emphasis>}</term>
+
+        <listitem>
+          <para>Added in Shorewall 4.4.20. If not specified, the default is
+          Yes which preserves the legacy behavior of <command>start
+          -s</command> in that the modification times of the files in
+          <filename>/etc/shorewall</filename> are compare with that of
+          <filename>/var/lib/shorewall/restore</filename>. If set to No, then
+          the times are compared with that of /var/lib/shorewall/firewall
+          which is consistant with the way that <command>restart -f</command>
+          works.</para>
         </listitem>
       </varlistentry>
 
