@@ -1415,6 +1415,13 @@
           <emphasis role="bold">-f</emphasis> is given, a
           <replaceable>directory</replaceable> may not be specified.</para>
 
+          <para>Update: In Shorewall 4.4.20, a new LEGACY_FASTSTART option was
+          added to <ulink url="shorewall.conf.html">shorewall.conf</ulink>(5).
+          When LEGACY_FASTSTART=No, the modificaiotn times of files in
+          /etc/shorewall are compared with that of /var/lib/shorewall/firewall
+          (the compiled script that last started/restarted the
+          firewall).</para>
+
           <para>The <option>-n</option> option causes Shorewall to avoid
           updating the routing table(s).</para>
 
