@@ -1176,6 +1176,14 @@
           role="bold">-f</emphasis> is given, a
           <replaceable>directory</replaceable> may not be specified.</para>
 
+          <para>Update: In Shorewall6 4.4.20, a new LEGACY_FASTSTART option
+          was added to <ulink
+          url="shorewall6.conf.html">shorewall6.conf</ulink>(5). When
+          LEGACY_FASTSTART=No, the modificaiotn times of files in
+          /etc/shorewall6 are compared with that of
+          /var/lib/shorewall6/firewall (the compiled script that last
+          started/restarted the firewall).</para>
+
           <para>The <option>-n</option> option causes Shorewall6 to avoid
           updating the routing table(s).</para>
         </listitem>
