@@ -2,6 +2,8 @@ Changes in Shorewall 4.4.20 Beta 4
 
 1)  Smarten up the tc devnum algorithm.
 
+2)  Implement LEGACY_FASTSTART option.
+
 Changes in Shorewall 4.4.20 Beta 3
 
 1)  Add auditing support.
